--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@ images/contents/*
 images/styles/*
 images/results/*
 style_transfer_tutorial.ipynb
+tempCodeRunnerFile.py
 *checkpoint.ipynb
 *draft*
